CSS - Made body overflow hidden and thereby fixes the login page growing out of screen size when logging in.

--- a/shared-data/default-theme/less/app/global.less
+++ b/shared-data/default-theme/less/app/global.less
@@ -1,3 +1,9 @@
+/* Body */
+
+  body {
+    overflow: hidden;
+  }
+
 /* Content */
 
   #content {
